# shinobi-secrets-server

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  server.py
SecureStorage/: logger.py  secure_memory_block.py  secure_store.py
src/: main.rs
src/server/: key_exchange.rs  mod.rs  server.rs  store.rs
src/types/: mod.rs  protected_secret.rs
