[package]
name = "shinobi_secrets_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
byteorder = "1.5.0"
env_logger = "0.11.5"
libc = "^0.2.167"
log = "0.4.22"
page_size = "0.6.0"
rand = "0.8.5"
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
daemonize = "0.5.0"
